プラグイン情報を表示

--- a/plugin/ui/public/index.html
+++ b/plugin/ui/public/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="js/index.js"></script>
     <title>JUCE8 WebView Plugin Tutorial</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <h1>Hello, World!</h1>
+      <h1>Hello, World!</h1>
+      <table id="productInfo">
+        <thead>
+          <tr>
+            <td>Property</td>
+            <td>Value</td>
+          </tr>
+          <tr>
+            <td>Vendor</td>
+            <td id="vendor"></td>
+          </tr>
+          <tr>
+            <td>Plugin name</td>
+            <td id="pluginName"></td>
+          </tr>
+          <tr>
+            <td>Plugin version</td>
+            <td id="pluginVersion"></td>
+          </tr>
+        </thead>
+      </table>
     </main>
-</body>
+  </body>
 </html>
