--- a/plugin/ui/public/index.html
+++ b/plugin/ui/public/index.html
@@ -29,6 +29,7 @@
           </tr>
         </thead>
       </table>
+      <button id="nativeFunctionButton">Call C++ Function</button>
     </main>
   </body>
 </html>
