--- a/plugin/ui/public/index.html
+++ b/plugin/ui/public/index.html
@@ -30,6 +30,7 @@
         </thead>
       </table>
       <button id="nativeFunctionButton">Call C++ Function</button>
+      <button id="emitEventButton">Emit a frontend event</button>
     </main>
   </body>
 </html>
